--- a/src/app/setting/index.scss
+++ b/src/app/setting/index.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: calc(100vh - 64px - 48px);
   #echarts-demo{
     width: 80%;
     height: 80%;
@@ -16,55 +16,73 @@
 .setting-config{
   flex: 1;
   height: 100vh;
-  min-width: 200px;
+  height: calc(100vh - 64px - 48px);
   overflow-y: auto;
-  .setting-common{
-    .group{
-      &-title{
-        color: #999;
-        margin-bottom: 24px;
+}
+.setting-common{
+  .group{
+    &-item{
+      font-size: 12px;
+      font-weight: bold;
+      margin-bottom: 12px;
+      position: relative;
+      .label{
+        width: 9em;
+        display: inline-block;
+        text-align: right;
+        margin-right: 5px;
       }
-      &-item{
+      .ant-input, .ant-select, .ant-slider{
+        width: 2.4rem;
         font-size: 12px;
-        font-weight: bold;
-        margin-bottom: 12px;
-        position: relative;
-        .label{
-          width: 8em;
-          display: inline-block;
-          text-align: right;
-        }
-        .ant-input, .ant-select, .ant-slider{
-          width: 2.4rem;
-          font-size: 12px;
-          display: inline-block;
-        }
-        p{
-          color: #999;
-          font-size: 10px;
-          font-weight: normal;
-        }
-        .color-block{
-          display: inline-block;
-          background: linear-gradient(to right, yellow, orange);
-          width: 30px;
-          height: 12px;
-        }
-        .sketch-picker{
-          position: absolute;
-          z-index: 9;
-        }
+        display: inline-block;
       }
-      &-item.align{
-        display: flex;
-        align-items: center;
-      }
-      &-subTitle{
+      p{
         color: #999;
-        margin-bottom: 12px;
-        font-size: 12px;
+        font-size: 10px;
         font-weight: normal;
       }
+      .color-block{
+        display: inline-block;
+        background: linear-gradient(to right, yellow, orange);
+        width: 30px;
+        height: 12px;
+      }
+      .sketch-picker{
+        position: absolute;
+        z-index: 9;
+      }
+      .add-item{
+        color: #1890ff;
+        cursor: pointer;
+      }
     }
+    &-item.align{
+      display: flex;
+      align-items: center;
+    }
+  }
+  .ant-collapse{
+    background-color: #fff;
+    border: none;
+    border-radius: 0;
+    >.ant-collapse-item {
+      border: none;
+      .ant-collapse-header{
+        color: #999;
+        border-radius: 0;
+      }
+      .ant-collapse .ant-collapse-header{
+        font-size: 12px;
+      }
+      .ant-collapse .ant-collapse-item{
+        .group-item{
+          .label{
+            color: #999;
+          }
+        }
+      }
+    }
+    
   }
 }
