--- a/src/app/setting/index.scss
+++ b/src/app/setting/index.scss
@@ -27,7 +27,7 @@
       margin-bottom: 12px;
       position: relative;
       .label{
-        width: 9em;
+        width: 10em;
         display: inline-block;
         text-align: right;
         margin-right: 5px;
@@ -49,7 +49,7 @@
         height: 12px;
       }
       .sketch-picker{
-        position: absolute;
+        // position: absolute;
         z-index: 9;
       }
       .add-item{
@@ -74,6 +74,13 @@
       }
       .ant-collapse .ant-collapse-header{
         font-size: 12px;
+        color: rgba(0, 0, 0, 0.65);
+        font-weight: bold;
+        padding-left: 18px;
+        .ant-collapse-arrow{
+          left: 0;
+        }
+        
       }
       .ant-collapse .ant-collapse-item{
         .group-item{
