--- a/src/app/setting/index.scss
+++ b/src/app/setting/index.scss
@@ -1,3 +1,4 @@
+@import '../../assets/style/variables';
 .setting-container{
   display: flex;
   padding: 24px;
@@ -44,16 +45,18 @@
       }
       .color-block{
         display: inline-block;
-        background: linear-gradient(to right, yellow, orange);
+        // background: linear-gradient(to right, yellow, orange);
         width: 30px;
         height: 12px;
+        margin-right: 10px;
+        border: 1px solid $primary-color;
       }
       .sketch-picker{
         // position: absolute;
         z-index: 9;
       }
       .add-item{
-        color: #1890ff;
+        color: $primary-color;
         cursor: pointer;
       }
     }
