--- a/src/app/setting/index.scss
+++ b/src/app/setting/index.scss
@@ -45,7 +45,8 @@
       }
       .color-block{
         display: inline-block;
-        background: linear-gradient(to right, yellow, orange);
+        // background: linear-gradient(to right, yellow, orange);
+        border: 1px solid #1890ff;
         width: 30px;
         height: 12px;
       }
