--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,8 @@
     position: fixed;
     width: 100%;
     z-index: 99;
+    text-align: right;
+    padding: 0 24px;
   }
   &-container{
     margin-top: 64px;
